# mybrowser

./: .gitignore  CI_README.md  CMakeLists.txt  README.md  build_debug.sh  debug_test.html  requirement.md  resources.qrc
.github/: CI_DETAILS.md
.github/workflows/: build-release.yml  ci.yml  quick-check.yml  release.yml
docs/: PICTURE_IN_PICTURE.md  README.md
resources/css/: pip.css  test-styles.css
resources/js/: pip.js  test-scripts.js  webview-enhancement.js
scripts/: README.md  build_debug.sh  build_release.sh
src/: bookmarkmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  pictureinpicturemanager.cpp  pictureinpicturemanager.h  quicksearchdialog.cpp  quicksearchdialog.h  styles.qss  verticaltabwidget.cpp  verticaltabwidget.h  webview.cpp  webview.h  workspacemanager.cpp  workspacemanager.h
src/core/: ui_constants.h
src/features/bookmark/: bookmark.css  bookmark.js  bookmarkmanager.cpp  bookmarkmanager.h
src/features/command-palette/: command-palette.css  command-palette.js  commandpalettedialog.cpp  commandpalettedialog.h  commandpalettemanager.cpp
src/features/main-window/: mainwindow.cpp  mainwindow.h  styles.qss
src/features/picture-in-picture/: macospipwindow.cpp  macospipwindow.h  macospipwindow.mm  pictureinpicturemanager.cpp  pictureinpicturemanager.h  pictureinpicturemanager_new.cpp  pip.css  pip.js  pip_enhanced.js  pip_main.cpp  pip_standalone.cpp  pip_standalone.h  pip_standalone_macos.h  pip_standalone_macos.mm  pipwindow.cpp  pipwindow.h  pipwindow_macos.mm
src/features/tab-widget/: tab-widget.css  tab-widget.js  verticaltabwidget.h
src/features/webview/: webview-enhancement.js  webview.cpp  webview.h
src/features/workspace/: workspace.css  workspace.js  workspacemanager.cpp  workspacemanager.h
src/managers/: commandpalettemanager.cpp  commandpalettemanager.h  pictureinpicturemanager.cpp  pictureinpicturemanager.h  workspacemanager.cpp
src/ui/: commandpalettedialog.cpp  verticaltabwidget.cpp  webview.cpp  webview.h
tests/: MACOS_SPACES_TEST.md  PIP_COMPREHENSIVE_TEST_GUIDE.md  README.md  SPACES_TEST_GUIDE.md  click_test.html  native_pip_test.html  nspanel_fullscreen_test.html  pip-test.css  pip-test.js  pip_image_selection_test.html  pip_independent_test.html  pip_integration_test.html  pip_test.html  pip_test_enhanced.html  pip_test_frame_capture.html  pip_test_frame_capture_true.html  pip_test_old.html  pip_test_refactored.html  pip_test_unified.html  streaming_site_pip_test.html  streaming_test_links.html  test_page.html  test_pip_ipc.py  video_test.html  youtube_pip_test.html
tests/backup/: standalone_pip_test.html
